[package]
name = "specsheet"
description = "The software testing toolkit"

authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2018"
exclude = ["/completions/*", "/xtests/*", "/Vagrantfile", "/screenshots.png", "/man/*", "/.rustfmt.toml", "/.travis.yml"]
homepage = "https://specsheet.software/"
license = "EUPL-1.2"
version = "0.1.0-pre"


[[bin]]
name = "specsheet"
path = "src/main.rs"


[workspace]
members = [
  "spec_analysis",
  "spec_commands",
  "spec_checks",
  "spec_exec",
]


[dependencies]
derive_more = "0.99"
diff = "0.1"

# ui
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"

# regex
once_cell = "1.4"
regex = "1.3"

# json output, and json, toml, and html result documents
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
horrorshow = "0.8"

# killing things
libc = "0.2"

# random check order
rand = "0.7"

# logging
log = "0.4"

[dependencies.spec_analysis]
path = "spec_analysis"

[dependencies.spec_commands]
path = "spec_commands"

[dependencies.spec_checks]
path = "spec_checks"

[dependencies.spec_exec]
path = "spec_exec"

[build-dependencies]
datetime = { version = "0.5.1", default_features = false }
regex = "1.3"
